	--- 9.10.4-P5 released ---

4530.	[bug]		Change 4489 broke the handling of CNAME -> DNAME
			in responses resulting in SERVFAIL being returned.
			[RT #43779]

4528.	[bug]		Only set the flag bits for the i/o we are waiting
			for on EPOLLERR or EPOLLHUP. [RT #43617]

4519.	[port]		win32: handle ERROR_MORE_DATA. [RT #43534]

4517.	[security]	Named could mishandle authority sections that were
			missing RRSIGs triggering an assertion failure.
			(CVE-2016-9444) [RT # 43632]

4510.	[security]	Named mishandled some responses where covering RRSIG
			records are returned without the requested data
			resulting in a assertion failure. (CVE-2016-9147)
			[RT #43548]

4508.	[security]	Named incorrectly tried to cache TKEY records which
			could trigger a assertion failure when there was
			a class mismatch. (CVE-2016-9131) [RT #43522]

	--- 9.10.4-P4 released ---

4489.	[security]	It was possible to trigger assertions when processing
			a response. (CVE-2016-8864) [RT #43465]

	--- 9.10.4-P3 released ---

4468.	[bug]		Address ECS option handling issues. [RT #43191]

			Note: Only the parts required to restore
			interoperation with ECS clients have been
			included in this security release.  The full
			fix is included in BIND 9.10.5.

4467.	[security]	It was possible to trigger a assertion when rendering
			a message. (CVE-2016-2776) [RT #43139]

	--- 9.10.4-P2 released ---

4406.	[bug]		getrrsetbyname with a non absolute name could
			trigger an infinite recursion bug in lwresd
			and named with lwres configured if when combined
			with a search list entry the resulting name is
			too long. (CVE-2016-2775) [RT #42694]

4405.	[bug]		Change 4342 introduced a regression where you could
			not remove a delegation in a NSEC3 signed zone using
			OPTOUT via nsupdate. [RT #42702]

4387.	[bug]		Change 4336 was not complete leading to SERVFAIL
			being return as NS records expired. [RT #42683]

	--- 9.10.4-P1 released ---
